--- a/package.json
+++ b/package.json
@@ -1,24 +1,34 @@
 {
-  "name": "connectup-web-desktop",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "12.1.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0"
-  },
-  "devDependencies": {
-    "@types/node": "17.0.39",
-    "@types/react": "18.0.10",
-    "@types/react-dom": "18.0.5",
-    "eslint": "8.16.0",
-    "eslint-config-next": "12.1.6",
-    "typescript": "4.7.2"
-  }
+	"name": "connectup-web-desktop",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"check-types": "tsc --pretty --noEmit",
+		"check-format": "prettier --check .",
+		"check-lint": "eslint . --ext ts --ext tsx --ext js",
+		"format": "prettier --write .",
+		"test-all": "npm run check-format && npm run check-lint && npm run check-types && npm run build",
+		"prepare": "husky install"
+	},
+	"dependencies": {
+		"@emotion/react": "^11.9.0",
+		"@emotion/styled": "^11.8.1",
+		"@mui/material": "^5.8.2",
+		"next": "12.1.6",
+		"react": "18.1.0",
+		"react-dom": "18.1.0"
+	},
+	"devDependencies": {
+		"@types/node": "17.0.39",
+		"@types/react": "18.0.10",
+		"@types/react-dom": "18.0.5",
+		"eslint": "8.16.0",
+		"eslint-config-next": "12.1.6",
+		"husky": "^8.0.0",
+		"prettier": "^2.6.2",
+		"typescript": "4.7.2"
+	}
 }
