--- a/package.json
+++ b/package.json
@@ -18,9 +18,14 @@
 		"@emotion/styled": "^11.8.1",
 		"@mui/icons-material": "^5.8.2",
 		"@mui/material": "^5.8.2",
-		"next": "12.1.6",
+		"@mui/x-data-grid": "^5.15.0",
+		"axios": "^0.27.2",
+		"formik": "^2.2.9",
+		"next": "^12.1.6",
 		"react": "18.1.0",
-		"react-dom": "18.1.0"
+		"react-dom": "18.1.0",
+		"react-router-dom": "^6.3.0",
+		"yup": "^0.32.11"
 	},
 	"devDependencies": {
 		"@types/node": "17.0.39",
